# rustytomatoes

./: Cargo.toml  README  Rocket.toml  er_schema
docker-database/: docker-compose.yml
docker-database/db/scripts/: down.sql  up.sql
src/: database.rs  main.rs  model.rs
static/: style.css  tomato.png~
templates/: actors.html.tera  base.html.tera  index.html.tera  media.html.tera  media_roles.html.tera  roles.html.tera
