[package]
name = "rustytomatoes"
version = "0.2.0"
edition = "2021"
authors = ["Jakob Fridesjö"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.14.1"
postgres = "0.19.2"
rocket = "0.5.0-rc.1"
rocket_codegen = "0.5.0-rc.1"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["postgres_pool"]
